compiler/tests/en/errors/dead_until.salam
// EXPECT: E068
func main:
    until false:
        println "never"
    end
end
